vendor/structopt-0.3.21/tests/ui/structopt_empty_attr.stderr
error: expected attribute arguments in parentheses: #[structopt(...)]
  --> $DIR/structopt_empty_attr.rs:14:5
   |
14 |     #[structopt]
   |     ^^^^^^^^^^^^
